# ghx_constrained_delaunay

./: .gitattributes  .gitmodules  CHANGELOG.md  Cargo.toml  README.md
assets/light/: bad_apple_frames_part.msgpack  ne_50m_coastline.dbf  ne_50m_coastline.shp
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: delaunay_comparison.rs  dt_benchmark.rs
benchmarks/examples/: Europe_coastline.shp.REMOVED.git-id  cdt_real_data.rs  real_data_benchmark.rs
benchmarks/src/: cdt_crate.rs  delaunator_crate.rs  ghx_cdt_crate.rs  lib.rs  spade_crate.rs
bevy_ghx_destruction/: Cargo.toml
bevy_ghx_destruction/src/: lib.rs  utils.rs
bevy_ghx_destruction/src/slicing/: mesh_mapping.rs  mod.rs  slicing.rs
bevy_ghx_destruction/src/triangulation/: constrained_triangulation.rs  mod.rs  triangulation.rs
delaunay_compare/: Cargo.toml  README.md
delaunay_compare/benches/: delaunay_comparison.rs
delaunay_compare/examples/: real_data_benchmark.rs
delaunay_compare/src/: cdt_crate.rs  delaunator_crate.rs  ghx_cdt_crate.rs  lib.rs  spade_crate.rs
examples/: Cargo.toml  ashbox.rs  constrained_triangulation.rs  real_data.rs  sandbox.rs  triangulation.rs
examples/.cargo/: config.toml
examples/examples/: bad_apple.rs  cdt.rs  cdt_real_data.rs  constrained_triangulation.rs  dt.rs  dt_random_data.rs  one_frame.rs  real_data.rs  real_data_tracy.rs  tmp_cdt.rs  triangulation.rs
examples/src/: ashbox.rs  ball.rs  camera.rs  debug_utils.rs  debugger.rs  example_setup.rs  fps.rs  lib.rs  lines.rs  mesh_mapping.rs  plugin.rs  prefracture.rs  sandbox.rs  triangle_debug.rs
examples/src/debugger/: gizmos.rs  infinite.rs  label.rs  meshes.rs
examples/src/prefracture/: prefracture.rs
examples/src/simple_delaunay/: simple_delaunay.rs
examples/src/slicing/: constrained_triangulation_example.rs  slicing.rs  triangulation_example.rs  utils.rs  utils_example.rs
examples/src/slicing/utils/: constrained_triangulation.rs  debug_utils.rs  mesh_mapping.rs  mod.rs  slicing_utils.rs  triangulation.rs  utils.rs
examples/src/tetgen/: tetgen.rs
examples/src/triangulation/: constrained_triangulation.rs  triangulation.rs
examples/utils/: example_setup.rs  mod.rs  triangle_debug.rs
profiling/: Cargo.toml
profiling/examples/: cdt_real_data.rs  dt_random_data.rs  real_data_tracy.rs  small_data_set.rs
src/: constrained_triangulation.rs  debug.rs  infinite.rs  lib.rs  triangulation.rs  types.rs  utils.rs
src/types/: f32.rs  f64.rs  u32.rs  u64.rs  vertex.rs
