[package]
name = "ghx_constrained_delaunay"
version = "0.2.0"
edition = "2021"
description = "2d constrained Delaunay triangulation"
repository = "https://github.com/Henauxg/ghx_constrained_delaunay"
documentation = "https://docs.rs/ghx_constrained_delaunay"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "triangulation", "delaunay", "2d"]
categories = ["algorithms", "game-development"]
readme = "README.md"
exclude = ["assets/", "docs/assets"]

[dependencies]
glam = { version = ">=0.21, <=0.30" }
hashbrown = "0.16.0"
arrayvec = "0.7.4"
thiserror = "2.0.17"

tracing = { version = "0.1.40", optional = true }
rayon = { version = "1.10.0", optional = true }

[features]
default = []

# Uses u64 indexes for the triangles and the vertices.
# Allows for a larger count of vertices to triangulate.
# (disabled by default for more performances)
u64_indexes = []

# Uses f32 for the triangulation.
# Gives just a bit more performances, at the price of stability in the algorithm.
# (disabled by default because the stability it brings often outweighs the performance gains)
f32 = []

# Only used in DT not in CDT.
# Allows filtering the triangles in parallel during the final step of the algorithm.  Since it is only useful for sizeable datasets, the activation threshold can be tweaked in the algorithm input configuration.
parallel_filtering = ["dep:rayon"]

# Register debug data (triangles) in buffers during the execution of the triangulation
debug_context = []
# Add logs during the triangulation process to indicate the current progress
progress_log = ["debug_context", "dep:tracing"]

# Adds profile spans to use with the Tracy profiler
profile_traces = ["dep:tracing"]
# Adds more profile spans to use with the Tracy profiler
more_profile_traces = ["profile_traces"]


[workspace]
members = ["benchmarks", "examples", "profiling"]
