[package]
name = "delaunay_compare"
version = "0.1.0"
edition = "2018"

[lib]


[dependencies]
num-traits = "0.2.14"
shapefile = "0.6.0"
tiny-skia = "0.11.4"

# Triangulation crates
cdt = "0.1"
delaunator = "1.0.1"
spade = "2.6.0"
ghx_constrained_delaunay = { path = "../", version = "0.1.0", features = [
    "f64",
] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8"
anyhow = "1.0.83"
env_logger = "0.11.3"
ordered-float = "4.2.0"

[[bench]]
name = "delaunay_comparison"
harness = false
