[package]
name = "bevy_ghx_destruction"
version = "0.1.0"
edition = "2021"

[dependencies]
# External dependencies
bevy = { version = "0.13.0", default-features = false, features = [] }
rand = "0.8.5"
ordered-float = "4.2.0"
bevy_rapier3d = { version = "0.25.0", features = [
    "simd-stable",
    "debug-render-3d",
] }
