[package]
name = "examples"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
# Internal dependencies
bevy_ghx_utils = { git = "https://github.com/Henauxg/bevy_ghx_utils.git", rev = "70e1f17", version = "0.3.0-dev", default-features = true }

# External dependencies
bevy = { version = "0.13", default-features = false, features = [
    # Default features:

    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_gilrs",         # Adds gamepad support
    "bevy_gizmos",        # Adds support for rendering gizmos
    "bevy_gltf",          # glTF support
    "bevy_render",        # Rendering framework core
    "bevy_pbr",           # 3D (physically-based) rendering
    "bevy_scene",         # Provides scene functionality
    "bevy_text",          # Text/font rendering
    "bevy_ui",            # UI toolkit
    "bevy_winit",         # winit window and input backend
    "default_font",       # Embed a minimal default font for text/UI
    "multi-threaded",     # Run with multithreading
    "tonemapping_luts",   # Support different camera Tonemapping modes (enables KTX2+zstd)

    # Platform-specific:
    "x11", # Linux: Support X11 windowing system

    # Non-default features:

    # Platform-specific:
    "wayland", # (Linux) Support Wayland windowing system
    # Development/Debug features:
    "dynamic_linking", # Dynamic linking for faster compile-times
] }
# Does not seem to compile without this explicit include...
bevy_gltf = { version = "0.13", default-features = false }
tritet = "0.4.0"
simple_delaunay_lib = "0.2.0"
bevy_rapier3d = { version = "0.25.0", features = [
    "simd-stable",
    "debug-render-3d",
] }
bevy_egui = "0.26"
bevy-inspector-egui = "0.23"
rand = "0.8.5"


[[example]]
name = "tetgen"
path = "src/tetgen/tetgen.rs"

[[example]]
name = "simple_delaunay"
path = "src/simple_delaunay/simple_delaunay.rs"

[[example]]
name = "prefracture"
path = "src/prefracture/prefracture.rs"
