[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false
description = "2d constrained Delaunay triangulation examples"
repository = "https://github.com/Henauxg/ghx_constrained_delaunay"
license = "MIT OR Apache-2.0"
exclude = ["assets/"]

# Examples
[[example]]
name = "dt"
path = "examples/dt.rs"

[[example]]
name = "cdt"
path = "examples/cdt.rs"

[[example]]
name = "cdt_real_data"
path = "examples/cdt_real_data.rs"

# Examples dependencies
[dependencies]
ghx_constrained_delaunay = { path = "../", version = "0.1.0", features = [
    "debug_context",
    "f64",
    "progress_log",
] }

glam = { version = "0.25" }
bevy_ghx_utils = { version = "0.3.0", default-features = true }
bevy = { version = "0.13", default-features = false, features = [
    # Default features:

    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_gilrs",         # Adds gamepad support
    "bevy_gizmos",        # Adds support for rendering gizmos
    "bevy_render",        # Rendering framework core
    "bevy_pbr",           # 3D (physically-based) rendering
    "bevy_scene",         # Provides scene functionality
    "bevy_text",          # Text/font rendering
    "bevy_ui",            # UI toolkit
    "bevy_winit",         # winit window and input backend
    "default_font",       # Embed a minimal default font for text/UI
    "multi-threaded",     # Run with multithreading
    "tonemapping_luts",   # Support different camera Tonemapping modes (enables KTX2+zstd)

    # Platform-specific:
    "x11", # Linux: Support X11 windowing system

    # Non-default features:

    # Platform-specific:
    "wayland", # (Linux) Support Wayland windowing system
] }
bevy_mod_billboard = { version = "0.6.0", git = "https://github.com/kulkalkul/bevy_mod_billboard.git" }
ordered-float = "4.2.0"
shapefile = "0.6.0"
