[package]
name = "profiling"
version = "0.1.0"
edition = "2021"
publish = false
description = "2d constrained Delaunay triangulation profiling"
repository = "https://github.com/Henauxg/ghx_constrained_delaunay"
license = "MIT OR Apache-2.0"

# Examples
[[example]]
name = "cdt_real_data"
path = "examples/cdt_real_data.rs"

[[example]]
name = "dt_random_data"
path = "examples/dt_random_data.rs"

# Examples dependencies
[dependencies]
ghx_constrained_delaunay = { path = "../", version = "0.2.0", features = [
    "parallel_filtering",
    "profile_traces",
] }

rand = "0.8"
shapefile = "0.6.0"
tracing = "0.1.40"
tracing-tracy = { version = "0.11.0", features = ["flush-on-exit"] }

tracing-subscriber = "0.3.18"
